--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="settings_label">Settings</string>
     <string name="enable_geofences">Enable Geofences</string>
     <string name="enable_location_services">Enable Location Services</string>
+    <string name="sharedPreferences" translatable="false">shushPrefs</string>
 </resources>
